# idvault

./: .gitignore  Cargo.toml
src/: file.rs  main.rs  queue.rs  uuid.rs
src/basictypes/: entity.rs  mod.rs  path.rs
src/components/: concept.rs  creator.rs  distribution.rs  feeling.rs  genre.rs  idea.rs  mod.rs  performer.rs  tag.rs
src/coretypes/: collectiontype.rs  date.rs  gender.rs  ideatype.rs  meta.rs  mod.rs  pathtype.rs  performancetype.rs  status.rs
src/structures/: collection.rs  mod.rs  release.rs
